# ModernCMakeTutorial

./: README.md
Appendix/: Alternative to Glob Recurse.md  Debugging CMake.md
Stage 1/Problem/: README.md  another_main.cpp
Stage 1/Solution/: CMakeLists.txt  README.md  main.cpp
Stage 2/Hints/: Step 2.md  Step 3.md
Stage 2/Problem/: README.md
Stage 2/Problem/include/: music_player.hpp
Stage 2/Problem/src/: main.cpp  music_player.cpp
Stage 2/Problem/unittests/: main.cpp
Stage 2/Solution/: CMakeLists.txt  README.md
Stage 2/Solution/include/: music_player.hpp
Stage 2/Solution/src/: main.cpp  music_player.cpp
Stage 2/Solution/unittests/: CMakeLists.txt  main.cpp
Stage 3/Hints/: Step 2.md  Step 4.md
Stage 3/Problem/: README.md
Stage 3/Problem/include/: multi_music_player.hpp
Stage 3/Problem/lib_music_player/: CMakeLists.txt  README.md
Stage 3/Problem/lib_music_player/include/music_player/: music_player.hpp
Stage 3/Problem/lib_spotify_player/: CMakeLists.txt  README.md
Stage 3/Problem/lib_spotify_player/include/spotify_player/: spotify_player.hpp
Stage 3/Problem/lib_spotify_player/src/: spotify_player.cpp
Stage 3/Problem/lib_spotify_player/unittests/: main.cpp
Stage 3/Problem/src/: main.cpp  multi_music_player.cpp
Stage 3/Problem/unittests/: test.cpp
Stage 3/Solution/: CMakeLists.txt  README.md
Stage 3/Solution/lib_music_player/: CMakeLists.txt
Stage 3/Solution/lib_spotify_player/: CMakeLists.txt
Stage 3/Solution/unittests/: CMakeLists.txt
Stage 4/Hints/: Step 3.md
Stage 4/Problem/: README.md
Stage 4/Solution/: CMakeLists.txt  Makefile  README.md
Stage 5/Problem/: README.md
Stage 5/Solution/: README.md
